--- a/dotnet_2022-04-26.md
+++ b/dotnet_2022-04-26.md
@@ -25,6 +25,25 @@ dotnet run  --launch-profil "IIS Express"
 dotnet run  --environment staging
 ```
 
+```
+POST https://localhost:44364/api/v1/Authenticate
+{
+"login": "user1@test.fr",
+"Password": "Za22!tRt"
+}
+
+POST https://localhost:44364/api/v1/Authenticate/register
+{
+"login": "user12@test.fr",
+"name": "user12",
+"Password": "Za22!tRt"
+}
+
+GET https://localhost:44364/api/v1/Dotsafes?userId=1
+Bearer .........................................
+```
+
+
 # outils
 
 ```odata``` : cadrer l'ensemble du REST au lieu de faire du web api rest full
